--- a/samples/quicktable.html
+++ b/samples/quicktable.html
@@ -31,9 +31,11 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 		quickTableRows: 20, <span style="color: green">// Count of rows in the quicktable (default: 8)</span>
 		quickTableColumns: 20, <span style="color: green">// Count of columns in the quicktable (default: 10)</span>
 		quickTableBorder: '1', <span style="color: green">// Border of the inserted table (default: '1')</span>
-		quickTableWidth: '90%', <span style="color: green">// Width of the inserted table (default: '100%')</span>
+		quickTableWidth: '90%', <span style="color: green">// Width of the inserted table (default: '500px')</span>
 		quickTableStyle: { 'border-collapse' : 'collapse' }, <span style="color: green">// Content of the style-attribute of the inserted table (default: null)</span>
 		quickTableClass: 'test' <span style="color: green">// Class of the inserted table (default: '')</span>
+		quickTableCellPadding: '0' <span style="color: green">// Cell padding of the inserted table (default: '1')</span>
+		quickTableCellSpacing: '0' <span style="color: green">// Cell spacing of the inserted table (default: '1')</span>
 	});
 &lt;/script&gt;
 </pre>
