--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
   <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="http://cdn.ckeditor.com/4.4.3/full-all/ckeditor.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
+  <!-- Example includes start -->
+  <script type="text/javascript" src="http://cdn.ckeditor.com/4.4.3/full-all/ckeditor.js"></script>
+  <script type="text/javascript" src="https://raw.githubusercontent.com/ufdada/quicktable/master/plugin.js"></script>
+  <script type="text/javascript" src="https://raw.githubusercontent.com/ufdada/quicktable/master/lang/en.js"></script>
   <link href="http://cdn.ckeditor.com/4.4.3/full-all/samples/sample.css" rel="stylesheet">
+  <!-- Example includes end -->
   <title>Quicktable</title>
   <meta name="description" content="A quicktable plugin for ckeditor 4">
 
