--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ I just extracted the code and made a seperate plugin out of it and added some op
         <span class="nx">qtColumns</span><span class="o">:</span> <span class="mi">20</span><span class="p">,</span> <span class="c1">// Count of columns</span>
         <span class="nx">qtBorder</span><span class="o">:</span> <span class="s1">'1'</span><span class="p">,</span> <span class="c1">// Border of inserted table</span>
         <span class="nx">qtWidth</span><span class="o">:</span> <span class="s1">'90%'</span><span class="p">,</span> <span class="c1">// Width of inserted table</span>
-        <span class="nx">qtStyle</span><span class="o">:</span> <span class="p">{</span> <span class="s1">'border-collapse'</span> <span class="o">:</span> <span class="s1">'collapse'</span> <span class="p">},</span> <span class="c1">// style-attribute of inserted table</span>
+        <span class="nx">qtStyle</span><span class="o">:</span> <span class="p">{</span> <span class="s1">'border-collapse'</span> <span class="o">:</span> <span class="s1">'collapse'</span> <span class="p">},</span>
         <span class="nx">qtClass</span><span class="o">:</span> <span class="s1">'test'</span><span class="p">,</span> <span class="c1">// Class of inserted table</span>
         <span class="nx">qtCellPadding</span><span class="o">:</span> <span class="s1">'0'</span><span class="p">,</span> <span class="c1">// Cell padding of inserted table</span>
         <span class="nx">qtCellSpacing</span><span class="o">:</span> <span class="s1">'0'</span> <span class="c1">// Cell spacing of inserted table</span>
