--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ I just extracted the code and made a seperate plugin out of it and added some op
 <h4>
 <a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Configuration:</h4>
 
-<div class="highlight highlight-javascript"><pre>    <span class="nx">CKEDITOR</span><span class="p">.</span><span class="nx">replace</span><span class="p">(</span> <span class="s1">'editor1'</span><span class="p">,</span> <span class="p">{</span>
+<pre>    <span class="nx">CKEDITOR</span><span class="p">.</span><span class="nx">replace</span><span class="p">(</span> <span class="s1">'editor1'</span><span class="p">,</span> <span class="p">{</span>
         <span class="nx">qtRows</span><span class="o">:</span> <span class="mi">20</span><span class="p">,</span> <span class="c1">// Count of rows</span>
         <span class="nx">qtColumns</span><span class="o">:</span> <span class="mi">20</span><span class="p">,</span> <span class="c1">// Count of columns</span>
         <span class="nx">qtBorder</span><span class="o">:</span> <span class="s1">'1'</span><span class="p">,</span> <span class="c1">// Border of inserted table</span>
@@ -130,7 +130,7 @@ I just extracted the code and made a seperate plugin out of it and added some op
         <span class="nx">qtCellPadding</span><span class="o">:</span> <span class="s1">'0'</span><span class="p">,</span> <span class="c1">// Cell padding of inserted table</span>
         <span class="nx">qtCellSpacing</span><span class="o">:</span> <span class="s1">'0'</span> <span class="c1">// Cell spacing of inserted table</span>
     <span class="p">});</span>
-</pre></div>
+</pre>
 
 <h4>
 <a name="known-issues" class="anchor" href="#known-issues"><span class="octicon octicon-link"></span></a>Known Issues:</h4>
