--- a/index.html
+++ b/index.html
@@ -118,18 +118,23 @@ I just extracted the code and made a seperate plugin out of it and added some op
 <p>Just copy the whole directory (quicktable) in the plugins directory</p>
 
 <h4>
-<a name="configuration" class="anchor" href="#configuration"><span class="octicon octicon-link"></span></a>Configuration:</h4>
-
-<pre><code class="lang-javascript">    CKEDITOR.replace( <span class="string">'editor1'</span>, {
-        quickTableRows: <span class="number">20</span>, <span class="comment">// Count of rows in the quicktable (default: 8)</span>
-        quickTableColumns: <span class="number">20</span>, <span class="comment">// Count of columns in the quicktable (default: 10)</span>
-        quickTableBorder: <span class="string">'1'</span>, <span class="comment">// Border of the inserted table (default: '1')</span>
-        quickTableWidth: <span class="string">'90%'</span>, <span class="comment">// Width of the inserted table (default: '500px')</span>
-        quickTableStyle: { <span class="string">'border-collapse'</span> : <span class="string">'collapse'</span> }, <span class="comment">// Content of the style-attribute of the inserted table (default: null)</span>
-        quickTableClass: <span class="string">'test'</span> <span class="comment">// Class of the inserted table (default: '')</span>
-        quickTableCellPadding: <span class="string">'0'</span> <span class="comment">// Cell padding of the inserted table (default: '1')</span>
-        quickTableCellSpacing: <span class="string">'0'</span> <span class="comment">// Cell spacing of the inserted table (default: '1')</span>
-    });</code></pre>
+<a name="changelog" class="anchor" href="#changelog"><span class="octicon octicon-link"></span></a>Changelog:</h4>
+<h3 id="version-1-0-2">Version 1.0.2</h3>
+<ul>
+<li>Adding cellspacing option</li>
+<li>Adding cellpadding option</li>
+<li>Change default width to table plugin default width</li>
+</ul>
+<h3 id="version-1-0-1">Version 1.0.1</h3>
+<ul>
+<li>change the sample to use ckeditor cdn</li>
+<li>adding a new class option to set the table attribute class</li>
+<li>change the style option type from string to object (for easier configuration)</li>
+</ul>
+<h3 id="version-1-0-0">Version 1.0.0</h3>
+<ul>
+<li>Initial Release</li>
+</ul>
 
 <h4>
 <a name="known-issues" class="anchor" href="#known-issues"><span class="octicon octicon-link"></span></a>Known Issues:</h4>
