--- a/index.html
+++ b/index.html
@@ -119,21 +119,37 @@ I just extracted the code and made a seperate plugin out of it and added some op
 
 <h4>
 <a name="changelog" class="anchor" href="#changelog"><span class="octicon octicon-link"></span></a>Changelog:</h4>
-<h3 id="version-1-0-2">Version 1.0.2</h3>
+<h5 id="version-1-0-4">Version 1.0.4</h5>
 <ul>
-<li>Adding cellspacing option</li>
-<li>Adding cellpadding option</li>
-<li>Change default width to table plugin default width</li>
+<li>fix refactoring errors (table dimensions didn't get updated anymore)</li>
+	<ul>
+		<li>Cannot read property 'setText' of undefined</li>
+		<li>Cannot read property '$' of undefined</li>
+	</ul> 
 </ul>
-<h3 id="version-1-0-1">Version 1.0.1</h3>
+<h5 id="version-1-0-3">Version 1.0.3</h5>
 <ul>
-<li>change the sample to use ckeditor cdn</li>
-<li>adding a new class option to set the table attribute class</li>
-<li>change the style option type from string to object (for easier configuration)</li>
+	<li>short option values (older ones are not supported anymore)</li>
+	<li>modify compiled sample so it refers to local ckeditor</li>
+	<li>updated configuration sample</li>
+	<li>example includes 2 editors (default and custom configuration)</li>
+	<li>code refactoring to decrease code complexity and count of statements</li>
 </ul>
-<h3 id="version-1-0-0">Version 1.0.0</h3>
+<h5 id="version-1-0-2">Version 1.0.2</h5>
 <ul>
-<li>Initial Release</li>
+	<li>Adding cellspacing option</li>
+	<li>Adding cellpadding option</li>
+	<li>Change default width to table plugin default width</li>
+</ul>
+<h5 id="version-1-0-1">Version 1.0.1</h5>
+<ul>
+	<li>change the sample to use ckeditor cdn</li>
+	<li>adding a new class option to set the table attribute class</li>
+	<li>change the style option type from string to object (for easier configuration)</li>
+</ul>
+<h5 id="version-1-0-0">Version 1.0.0</h5>
+<ul>
+	<li>Initial Release</li>
 </ul>
 
 <h4>
